fix: inline variable